--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "next build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out -b master",
     "start": "next start",
     "lint": "next lint",
     "email": "email dev"
