--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.0.25",
     "lucide-react": "^0.364.0",
-    "next": "^14.2.1",
+    "next": "^14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.30.2",
     "react-transition-group": "^4.4.5",
     "resend": "^3.2.0",
