--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-email": "2.1.1",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
+    "react-parallax-tilt": "^1.7.225",
     "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.30.2",
